# eudaq

conf/: telescope_autotrigger.conf  telescope_beamPaul.conf
etc/scripts/: STARTRUN.cms  STARTRUN.paul
main/exe/: CMakeLists.txt
main/exe/src/: ExampleProducer.cxx  euCliReader.cxx
main/include/eudaq/: DataCollector.hh  DataSender.hh
main/lib/src/: DataCollector.cc  DataSender.cc
producers/cmspixel/include/: CMSPixelProducer.hh
producers/cmspixel/src/: CMSPixelConfigParser.cxx  CMSPixelProducer.cxx
producers/ni/src/: NiProducer.cxx
user/: CMakeLists.txt
user/QDC/: CMakeLists.txt
user/QDC/hardware/: CMakeLists.txt
user/QDC/hardware/include/: CAENVMEtypes.h  QDCControl.hh
user/QDC/hardware/src/: QDCControl.cc
user/QDC/misc/: QDC.conf  QDC.ini  ReadBinaryData.cc  example_startrun.sh
user/QDC/module/: CMakeLists.txt
user/QDC/module/src/: QDCProducer.cc  QDCRaw2StdEventConverter.cc
user/eudet/misc/: telescope.ini
user/eudet/misc/conf/aida_tlu/beam/: only-telescope_standard-mode_one-DC.conf
user/eudet/misc/environments/: setup_eudaq2_aida-tlu.sh
user/piStage/: README.md
user/piStage/module/src/: PIStageProducer.cc
user/tlu/module/src/: TluRawEvent2StdEventConverter.cc
